piccoli cambiamenti all'ID

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </div>
     <div class="d-flex justify-content-around align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center box">
-            <label for="idPeer2">Inserisci id da connettere</label>
+            <label class="fw-bold" for="idPeer2">Inserisci l'ID da connettere</label>
             <input type="text" name="idPeer2" id="idPeer2">
             <button class="btn btn-primary mt-3" id="buttonConnection">Crea Connessione</button>
         </div>
         <div class="d-flex flex-column justify-content-center align-items-center box">
-            <label for="yourPeer">Questo è il tuo ID</label>
-            <input type="text" name="yourPeer" id="yourPeer">
+            <label class="fw-bold" for="yourPeer">Questo è il tuo ID</label>
+            <div class="bg-warning border-bottom p-2" id="yourPeer"></div>
             <button id="copyPeer" class="btn btn-primary mt-3">Copia</button>
         </div>
 
