--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p id="turn" class="text-center fs--bold display-5"></p>
             </div>
             <div class="col-6">
-                <div class="container">
+                <div class="container-fluid position-relative">
                     <div class="row">
                         <div class="col-12 d-flex justify-content-center">
                             <div class="tic d-flex justify-content-center align-items-center">-</div>
@@ -58,7 +58,10 @@
                             <div class="tic d-flex justify-content-center align-items-center">-</div>
                         </div>
                     </div>
+                    <!-- WINNER  -->
                  
+                    <h2 id="winner" class="display-1 winner d-none"></h2>
+                
                 </div>
             </div>
         </div>
