--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
     <div>
         <h1 class=" text-center display-3 my-5">TIC TAC TOE</h1>
     </div>
-    <div class="d-flex justify-content-around align-items-center">
-        <div class="d-flex flex-column justify-content-center align-items-center box">
+    <div  class="d-flex justify-content-around align-items-center">
+        <div id="connected" class="d-flex flex-column justify-content-center align-items-center box position-relative">
             <label class="fw-bold" for="idPeer2">Inserisci l'ID da connettere</label>
             <input type="text" name="idPeer2" id="idPeer2">
             <button class="btn btn-primary mt-3" id="buttonConnection">Crea Connessione</button>
+            <!-- <div class="copied">connesso</div> -->
         </div>
-        <div class="d-flex flex-column justify-content-center align-items-center box">
+        <div id="copied" class="d-flex flex-column justify-content-center align-items-center box position-relative">
             <label class="fw-bold" for="yourPeer">Questo è il tuo ID</label>
             <div class="bg-warning border-bottom p-2" id="yourPeer"></div>
             <button id="copyPeer" class="btn btn-primary mt-3">Copia</button>
+            <!-- <div class="copied">copiato</div> -->
         </div>
 
     </div>
     
     <div id="gameboard" class="container-fluid d-none mt-3">
         <div class="row justify-content-center">
-            <div class="col-12 d-flex justify-content-center my-3">
-                <button id="resetGame" class="btn btn-danger">Reset Game</button>
-            </div>
-            <div class="my-1">
+            <div class="my-3">
                 <p id="turn" class="text-center fs--bold display-5"></p>
             </div>
-            <div class="col-6">
+            <div class="col-12">
                 <div class="container-fluid position-relative">
                     <div class="row">
                         <div class="col-12 d-flex justify-content-center">
@@ -63,6 +62,9 @@
                     <h2 id="winner" class="display-1 winner d-none"></h2>
                 
                 </div>
+            </div>
+            <div class="col-12 d-flex justify-content-center mt-2 mb-5">
+                <button id="resetGame" class="btn btn-danger">Reset Game</button>
             </div>
         </div>
     </div>
